<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PairSum</string>
    <string name="title_activity_convidar">Invite</string>
    <string name="title_activity_facebook">Ranking</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string translatable="false" name="company">Droid.GO, Inc.</string>
    <string translatable="false" name="mail">droidgodev@gmail.com</string>
    <string translatable="false" name="labelSobreInfo">Company\nDroid.GO, Inc\ndroidgodev@gmail.com\n\nhttp://droidgodev.com\n\nApp\nVersion: %1$s\nBuild: %2$d</string>
    <string name="labelOkay">OK</string>
    <string name="labelSobre">About</string>
    <string name="labelEmbaralha">Shuffle</string>
    <string name="labelPontuacao">Score:</string>
    <string name="labelTitMovimentos">Movements</string>
    <string name="labelTitPontos">Score</string>
    <string name="labelTitMaxPontos">High Score</string>
    <string name="labelVoltar">Back</string>
    <string name="labelNovo">New Match</string>
    <string name="labelMensagemNaoExibida">Advertising will no longer be displayed int the next %1$d hours!</string>
    <string name="labelPropagandaNaoMaisExibida">Advertising will not be shown anymore!</string>
    <string name="labelNaoExibirMaisSing">Open the Addon for %1$d time and advertising will no longer be displayed!</string>
    <string name="labelNaoExibirMaisPlu">Open the Addon for %1$d times and advertising will no longer be displayed!</string>
    <string name="labelNenhumMovRestante">Any remainder movement!</string>
    <string name="labelRestart">Restart!</string>
    <string name="labelReiniciarJogo">Restart the Match?</string>
    <string name="labelSim">Yes</string>
    <string name="labelNao">No</string>
    <string name="labelBackground">Background</string>
    <string name="labelSubMenuBackgroundDefault">Fresh</string>
    <string name="labelSubMenuBackgroundDark">Dark</string>
    <string name="labelSubMenuBackgroundMultColor">Colorful</string>
    <string name="labelBlock">Blocks</string>
    <string name="labelSubMenuBlockDefault">Fresh</string>
    <string name="labelSubMenuBlockDark">Dark</string>
    <string name="labelSubMenuBlockMultColor">Colorful</string>
    <string name="labelCor">Colors</string>
    <string name="labelFacebook">Facebook</string>
    <string name="labelSettings">Settings</string>
    <string name="labelDesafiar">Challenging Amigos</string>
    <string name="labelConvidar">Invite Amigos</string>
    <string name="labelConvidarTodos">Invite All</string>
    <string name="labelDados">My Data</string>
    <string name="labelSair">Exit</string>
    <string name="labelProcurar">Search</string>
    <string name="labelMensagem">My current score in PairSum is %1$d points. Come to play and try to beat my record !</string>
    <string name="labelRequestSent">Invitation Send!</string>
    <string name="labelRequestCancelled">Invitation Canceled!</string>
    <string name="labelRequestNetworkError">Network Error!</string>
    <string name="labelCarregandoLista">Loading friends list &#8230;</string>
    <string name="labelConquistasPlayGames">Achievements</string>
    <string name="labelRankPlayGames">Leaderboards</string>
    <string name="labelPlayGames">Google Play Games</string>
    <string name="labelParabens">Congratulations!!!</string>
    <string name="labelConectarScore">You have reached %1$d points. Do you want to connect to Play Games to share your score?</string>
    <string name="labelConectarConquista">You unlock the block %1$d. Do you want to connect to Play Games to save your achievements and receive rewards?</string>
    <string name="labelSairPlayGames">Logoff Play Games</string>
    <string name="labelEntrarPlayGames">Logon Play Games</string>
    <string name="labelProblemaLogarPlayGames">Unable to login in Play Games!</string>
    <string name="labelConectadoPlayGames">Connected to Play Games!</string>
    <string name="labelShare">Share</string>
    <string name="labelMailBug">Bug Report</string>
    <string name="labelMailSugestion">Suggestions</string>
    <string name="labelContato">Contact</string>
    <string name="labelVerJogo">Analyze Match</string>
    <string name="labelDesejaConectarAoGP">Connect to Play Games?</string>
    <string name="labelAgoraNao">Not now</string>
    <string name="labelNunca">Never</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="labelProx">&#62;&#62;</string>
    <string name="labelAnte">&#60;&#60;</string>
    <string name="labelAvaliar">Rate It</string>
    <string name="labelEntendi">OK, I got it!</string>
    <string name="labelTop1">1. Click any block</string>
    <string name="labelTop2">2. Then click another neighboring block with the same value</string>
    <string name="labelBottom2">Movements tips on clear blocks</string>
    <string name="labelTop3">The new fixed block (colored) receives the sum</string>
    <string name="labelBottom3">The variables block (dark) receive new values ​​2, 4, 8, 16 or 32</string>
    <string name="labelTop4">1. Connect to Google Play Games</string>
    <string name="labelBottom4">Unlock achievements and earn a last achievement block every new game</string>
    <string name="labelInstrucao">Instruction %1$d of %2$d</string>
    <string name="labelBottom1">Swipe to right to see the next instruction or click ( &#62;&#62; )</string>
    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">If you enjoy this app, please take a moment to rate this app. It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Remind later</string>
    <string name="rta_dialog_no">No, thanks</string>
    <string name="labelDesbloqueou512">You unlocked the 512 block. Do you want to restart the match?</string>
	<string name="labelShareWith">Share using</string>
	<string name="labelFila">Queue</string>
	<string translatable="false" name="labelVideo">Gameplay</string>
    <string name="labelTitTickts">Tickets:</string>
    <string name="labelUnlockTickts">Unlocked %1$d Tickets</string>
	<string name="labelVideoAssitir">Watch the Gameplay + Tutorial?\n\nYou can watch anytime in "Menu > Gameplay"</string>
    <string name="labelDica3">3. The second clicked block receives the sum and the first clicked block receives the last value of the queue. All the white blocks receives new values while the row of blocks advances 1 position</string>
    <string name="labelChangeTickts">Change Tickets</string>
    <string translatable="false" name="title_activity_change">ChangeActivity</string>

    <string name="labelMsgGerada">Generated Message</string>
    <string name="labelLine1">Just replaced %1$d Tickets to compete for one S6 Edge in promoting \"PairSum in mine S6 Edge!\"</string>
    <string name="labelLine2">Wants to compete too? It\'s easy!</string>
    <string name="labelLine3">1. Download PairSum on your Android in:</string>
    <string name="labelLine4">2. Follow the instructions in the image below\n</string>
    <string translatable="false" name="labelUrl">https://play.google.com/store/apps/details?id=br.com.pablodev.sum</string>
    <string name="labelMsgCopy">Message copied to Clipboard</string>
    <string name="labelShareFB">Share on Facebook</string>
    <string name="labelatention">Attention!!!</string>
    <string name="labeltxtperdertickts">If you proceed with this action without having validated your Tickets you will lose them. \nAlready validated your Tickets?</string>
    <string name="labelTuto1">1. Long Click</string>
    <string name="labelTuto2">2. PASTE</string>
    <string name="labelTuto3">3. Post</string>
    <string name="labelTitDialog">Instructions</string>
    <string name="labelTicketsChanged">Tickets already changed!</string>
    <string name="labelExplicaValida">Click in \"Share on Facebook\" and proceed with the steps to validate your Tickets and register them in the promotion.</string>

</resources>