<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_item_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/labelShare"/>
    <item
        android:id="@+id/menuBack"
        android:icon="@drawable/ic_action_undo"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/labelVoltar"/>
    <item
        android:id="@+id/menuNovo"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/labelNovo"/>
    <item
        android:id="@+id/openGooglePlayGames"
        android:icon="@drawable/logo_play_games_off"
        android:orderInCategory="5"
        android:showAsAction="always"
        android:title="@string/labelPlayGames">
        <menu>
            <item
                android:id="@+id/menuPlayGamesLogon"
                android:title="@string/labelEntrarPlayGames"/>
            <item
                android:id="@+id/menuPlayGamesConquistas"
                android:title="@string/labelConquistasPlayGames"/>
            <item
                android:id="@+id/menuPlayGamesRank"
                android:title="@string/labelRankPlayGames"/>
            <item
                android:id="@+id/menuPlayGamesLogoff"
                android:title="@string/labelSairPlayGames"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_settings"
        android:title="@string/labelSettings">
        <item
            android:id="@+id/menuNovoMenu"
            android:title="@string/labelNovo">
        </item>
        <item
            android:id="@+id/menuBackMenu"
            android:title="@string/labelVoltar">
        </item>
        <item
            android:id="@+id/menuContato"
            android:title="@string/labelContato">
            <menu>
                <group android:id="@+id/groupCOntato" >
                    <item
                        android:id="@+id/menuMailBug"
                        android:title="@string/labelMailBug"/>
                    <item
                        android:id="@+id/menuMailSugestion"
                        android:title="@string/labelMailSugestion"/>
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/menuVideoMenu"
            android:title="@string/labelVideo">
        </item>
        <item
            android:id="@+id/menuAvaliar"
            android:title="@string/labelAvaliar">
        </item>
        <item
            android:id="@+id/menuSobreMenu"
            android:title="@string/labelSobre">
        </item>
        <item
            android:id="@+id/menuSairMenu"
            android:title="@string/labelSair">
        </item>
    </item>

</menu>